--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a4a37a">  <td>26/01/19 00:31:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.aidasoftware.qa.testcases.LoginTest@66982506]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="a4a37a">  <td>26/01/19 00:31:07</td>   <td>-1443</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyLoginWithoutProvidingCredentials()[pri:5, instance:com.aidasoftware.qa.testcases.LoginTest@66982506]">verifyLoginWithoutProvidingCredentials</td> 
+<tr bgcolor="d4949f">  <td>26/02/04 23:57:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="QuotationTest.createQuotationTestWithMandatoryFields()[pri:0, instance:com.aidasoftware.qa.testcases.QuotationTest@7a5ceedd]">createQuotationTestWithMandatoryFields</td> 
   <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="a4a37a">  <td>26/01/19 00:30:12</td>   <td>-57034</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setup()[pri:0, instance:com.aidasoftware.qa.testcases.LoginTest@66982506]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="d4949f">  <td>26/02/04 23:56:11</td>   <td>-64065</td> <td>&nbsp;</td><td title="&gt;&gt;QuotationTest.setup()[pri:0, instance:com.aidasoftware.qa.testcases.QuotationTest@7a5ceedd]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
 </table>
